2011-11-24  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am (music_LDADD): Changed libmpidep.a -> libmpidep.la.

2011-03-04  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* application_mapper.cc, application_mapper.hh, music.cc: Added an
	option -e to the music launcher tool.  This option causes the
	music launcher tool to write down one launcher script for each
	application.  These scripts can be used in place of the music tool
	in environments which require this.

2010-07-28  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.7

2009-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.6

2009-10-24  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.5

	* application_mapper.cc (ApplicationMapper::mapConnectivity): Let
	port code be unique within the multi-simulation.

2009-04-01  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* Release 1.0.4

2009-03-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.3

2009-03-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.2

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.1

2009-03-07  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* VisualiseNeurons.cpp (VisualiseNeurons::printHelp): Updated text.

	* eventcounter.cc (usage): Updated text.

2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music.cc: New option -v.

2009-03-04  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music.cc (print_map): New function.
	(main): Add new option -m for printing of application ranks.

2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0

2009-02-15  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* application_mapper.cc (ApplicattionMapper::mapConnectivity):
	Moved generation of port codes to a position which is treated
	identically in all processes.

2009-02-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music.cc: Moved mpi dependent code to ../mpidep/mpidep.cc.

	* Makefile.am: Removed dependency on librudeconfig for all